--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,7 +4,7 @@
 
 tasks:
   - init: curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && unzip awscliv2.zip && sudo ./aws/install && rm awscliv2.zip
-  - init: npm install
+  - init: npm install -g typescript && npm install -g aws-cdk && npm install
     # command: npm run watch
 vscode:
   extensions:
