--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,8 +3,10 @@
 # Please adjust to your needs (see https://www.gitpod.io/docs/config-gitpod-file)
 # and commit this file to your remote git repository to share the goodness with others.
 
-image:
-  file: .gitpod.Dockerfile
+# image:
+#   file: .gitpod.Dockerfile
+
+image: degiple/gitpod-workspace-awscdk-typescript
 
 tasks:
   - init: npm install
